# Bank-Policy-Intelligence-Assistant

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
bank-policy-rag-assistant/: README.md  requirements.txt
bank-policy-rag-assistant/bank_policy/: __init__.py  features.py  plots.py
bank-policy-rag-assistant/bank_policy/modeling/: predict.py  train.py
bank-policy-rag-assistant/bank_policy/rag/: ingest.py
bank_policy/: config.py  dataset.py
bank_policy/modeling/: predict.py
bank_policy/rag/: app.py  ingest.py  retrieve.py
